--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Greatosky.github.io/QFS-PROJECT",
+  "homepage": "https://greatosky.github.io/QFS-PROJECT",
   "name": "my-react-app",
   "version": "0.1.0",
   "private": true,
